[package]
name = "rust_os"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
bootloader = "0.3.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-larusso-rustos.json"
output = "rustos.bin"
