[package]
name = "rust_os"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
bootloader = "0.3.5"
volatile = "0.2.5"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.4.10"

[dev-dependencies]
array-init = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-larusso-rustos.json"
output = "rustos.bin"
